finished manual deposit

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY='lvf8j&-8y+qw509d02cykp&tz5$n9d0b_jpb24dx4mln#c1uzu'
 
-SITE_NAME='Topplaysports'
+SITE_NAME='Topsport'
 SITE_URL='localhost:8000'
 SMS_API_KEY=''
 
