--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,36 @@
 APScheduler==3.6.0
 authy==2.2.3
 autopep8==1.4.4
+boto3==1.14.23
+botocore==1.17.23
 certifi==2019.11.28
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==2.2.1
 django-cors-headers==3.0.2
 django-crispy-forms==1.7.2
 django-environ==0.4.5
+django-heroku==0.3.1
+django-storages==1.9.1
 djangorestframework==3.9.4
 djangorestframework-jwt==1.11.0
+docutils==0.15.2
+gunicorn==20.0.4
 idna==2.8
-
+jmespath==0.10.0
+paystack==1.5.0
+paystackpy==0.0.3
 Pillow==6.2.1
-psycopg2==2.8.2
+psycopg2==2.8.5
 pycodestyle==2.5.0
 PyJWT==1.7.1
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
+s3transfer==0.3.3
 simplejson==3.17.0
 six==1.13.0
 sqlparse==0.3.0
 tzlocal==2.0.0
 urllib3==1.25.7
+whitenoise==5.1.0
