--- a/.env
+++ b/.env
@@ -14,9 +14,9 @@ DB_USER=
 
 DJANGO_SETTINGS_MODULE=settings.local
 
-MAIL_HOST= 'smtp.gmail.com'
-MAIL_USER= 'njoagwuanidavid@gmail.com'
-MAIL_PASSWORD= 'pastorchris'
+MAIL_HOST= smtp.gmail.com
+MAIL_USER= njoagwuanidavid@gmail.com
+MAIL_PASSWORD= pastorchris
 MAIL_PORT= 587
 MAIL_USE_TLS= True
 
